tests/NormalTests/paczka1/fuzzy1/38472202.err
Error in line 11: s3pm S947 81,9
Error in line 13: OpkmiF S947 48,0
Error in line 18: YU31v S760 97,7
Error in line 25: YU31v A851 74,95
Error in line 19: YU31v S947 340,4
Error in line 28: nWVbAo4 S947 97,1
Error in line 31: nWVbAo4 S760 2,0
Error in line 27: YICSL S947 25,9
